--- a/开发设想.md
+++ b/开发设想.md
@@ -48,19 +48,21 @@
 
 
 
-猕猴桃：奥利奥。
+猕猴桃：嘿，你好。
 
-奥利奥：是谁？
+奥利奥：.......
 
-猕猴桃：是我，猕猴桃。
+猕猴桃：我叫奥利奥，很高兴认识你。
 
-奥利奥：你在哪里？我们一直在找你。
+奥利奥：我们认识吗？
 
-猕猴桃：我.......这里很黑。
+猕猴桃：不认识，但是可以贴贴吗？
 
-奥利奥：你被关起来了吗？我来救你。
+奥利奥：......可以。
 
-猕猴桃：谢谢你.......这个给你。
+猕猴桃：.......
+
+米：谢谢你.......这个给你。
 
 奥利奥：什么？
 
